--- a/client/css/game.css
+++ b/client/css/game.css
@@ -187,6 +187,12 @@ body {
     right: 0px;
 }
 
+.gamedialog {
+    background-image: url('/client/assets/textures/ui/beigefade.png');
+    background-size: 100% 100%;
+    border: 2px solid #99ccff;
+    border-radius: 5px;
+}
 
 .editorTopNavBar ul {
     font-family: 'Press Start 2P', cursive;
@@ -483,62 +489,4 @@ body {
 .igeEditorProperty .label {
     font-weight: bold;
     font-size: 12px;
-}
-
-.ui-dialog .ui-dialog-titlebar {
-    padding: 10px;
-}
-.ui-widget-header {
-    border: none;
-    background: none;
-    font-family: 'Verdana', cursive;
-    font-style: #fff;
-    padding: 10px;
-    font-size: 14px;
-}
-.ui-dialog .ui-dialog-content {
-    padding: 0;
-    background-image: url('/client/assets/textures/backgrounds/greenBackground.png');
-}
-.ui-dialog {
-    font-family: 'Verdana', cursive;
-    font-style: #fff;
-    background-image: url('/client/assets/textures/backgrounds/greenBackground.png');
-    background-color: #0c0;
-}
-.ui-dialog .ui-dialog-content ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-.ui-dialog .ui-dialog-content ul li {
-    font-family: 'Verdana', cursive;
-    font-style: #fff;
-    cursor: pointer;
-    font-size: 14px;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-    background-image: url('/client/assets/textures/backgrounds/greenBackground.png');
-}
-.ui-dialog .ui-dialog-content ul li:hover {
-    color: #cc0000;
-}
-.ui-dialog-no-titlebar .ui-dialog-titlebar {
-    display: none;
-}
-.ui-dialog-titlebar-close {
-
-    /* background-image: url('/client/assets/textures/ui/close.png'); */
-    background-color: red;
-    background-size: 100%;
-    width: 15px;
-}
-.ui-dialog-titlebar-close:hover {
-    background-color: red;
-}
-.ui-icon-closethick {
-    color: white;
-}
-.ui-icon-closethick:hover {
-    background-color: red;
 }
