change font to arial

--- a/client/css/jqueryui-overrides.css
+++ b/client/css/jqueryui-overrides.css
@@ -97,7 +97,7 @@
 }
 
 .ui-widget {
-    font-family: "Press Start 2P" !important;
+    font-family: "Press Start 2P”, arial;
     font-size: 1em !important;
 }
 
