--- a/client/css/game.css
+++ b/client/css/game.css
@@ -3,7 +3,7 @@
 html {
 	margin: 0;
 	padding: 0;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 }
 body {
 	background: #000;
@@ -17,7 +17,7 @@ body {
 	background-repeat: no-repeat;
 }
 button, input, textarea {
-	font-family: "Press Start 2P" !important;
+	font-family: "Press Start 2P”, arial;
 }
 .loadingFloat {
 	padding: 20px;
@@ -33,7 +33,7 @@ button, input, textarea {
 	padding: 5px;
 }
 .loadingTitle {
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 	color: #fff;
 	font-size: 28px;
 }
@@ -79,7 +79,7 @@ button, input, textarea {
 }
 .loadingText {
 	color: white;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 	font-size: 16px;
 	text-align: center;
 	font-variant: small-caps;
@@ -104,7 +104,7 @@ button, input, textarea {
 	right: 10px;
 	bottom: 10px;
 	color: white;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 	font-size: 16px;
 	font-variant: small-caps;
 	width: 250px;
@@ -185,7 +185,7 @@ button, input, textarea {
 	color: white;
 }
 .editorTopNavBar ul {
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 	font-size: 16px;
 	color: white;
 }
@@ -635,7 +635,7 @@ button, input, textarea {
 }
 #notificationMessage {
 	position: fixed;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 	font-size: 16px;
 	color: white;
 	top: 0px;
@@ -651,7 +651,7 @@ button, input, textarea {
 #villageTitle {
 	display: none;
 	text-align: center;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 	font-size: 20px;
 	color: white;
 	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
