--- a/client/css/login.css
+++ b/client/css/login.css
@@ -2,7 +2,7 @@ body {
     background-color: #407c03;
     margin: 0;
     padding: 0;
-    font-family: 'Press Start 2P', 'Open Sans';
+    font-family: 'Press Start 2P', arial;
 
 }
 
