--- a/client/css/game.css
+++ b/client/css/game.css
@@ -3,11 +3,11 @@
 html {
 	margin: 0;
 	padding: 0;
-	font-family: 'Press Start 2P', arial;
+	font-family: arial;
 }
 body {
 	background: #000;
-	background-image: url("/client/assets/images/backgrounds/FullVillage.webp");
+	background-image: url("/client/assets/textures/backgrounds/FullVillage.webp");
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -17,7 +17,7 @@ body {
 	background-repeat: no-repeat;
 }
 button, input, textarea {
-	font-family: "Press Start 2P”, arial;
+	font-family: arial;
 }
 .loadingFloat {
 	padding: 20px;
@@ -33,7 +33,7 @@ button, input, textarea {
 	padding: 5px;
 }
 .loadingTitle {
-	font-family: 'Press Start 2P', arial;
+	font-family: arial;
 	color: #fff;
 	font-size: 28px;
 }
@@ -43,7 +43,7 @@ button, input, textarea {
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 30px;
-	background-image: url(/client/assets/images/ui/loadinglogo.png);
+	background-image: url(/client/assets/textures/ui/loadinglogo.png);
 }
 .loadingCircle {
 	left: -15px;
@@ -79,7 +79,7 @@ button, input, textarea {
 }
 .loadingText {
 	color: white;
-	font-family: 'Press Start 2P', arial;
+	font-family: arial;
 	font-size: 16px;
 	text-align: center;
 	font-variant: small-caps;
@@ -104,7 +104,7 @@ button, input, textarea {
 	right: 10px;
 	bottom: 10px;
 	color: white;
-	font-family: 'Press Start 2P', arial;
+	font-family: arial;
 	font-size: 16px;
 	font-variant: small-caps;
 	width: 250px;
@@ -158,7 +158,7 @@ button, input, textarea {
 }
 #topToolbar img {
 	display: block;
-	background-image: url('/client/assets/images/ui/beigefade.png');
+	background-image: url('/client/assets/textures/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
@@ -185,7 +185,7 @@ button, input, textarea {
 	color: white;
 }
 .editorTopNavBar ul {
-	font-family: 'Press Start 2P', arial;
+	font-family: arial;
 	font-size: 16px;
 	color: white;
 }
@@ -414,7 +414,7 @@ button, input, textarea {
 	border: 2px solid white;
 	display: inline-block;
 	cursor: pointer;
-	background-image: url('/client/assets/images/ui/beigefade.png');
+	background-image: url('/client/assets/textures/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border-radius: 5px;
@@ -559,7 +559,7 @@ button, input, textarea {
 }
 #topToolbarTutorial img {
 	display: block;
-	background-image: url('/client/assets/images/ui/beigefade.png');
+	background-image: url('/client/assets/textures/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
@@ -635,7 +635,7 @@ button, input, textarea {
 }
 #notificationMessage {
 	position: fixed;
-	font-family: 'Press Start 2P', arial;
+	font-family: arial;
 	font-size: 16px;
 	color: white;
 	top: 0px;
@@ -651,14 +651,14 @@ button, input, textarea {
 #villageTitle {
 	display: none;
 	text-align: center;
-	font-family: 'Press Start 2P', arial;
+	font-family: arial;
 	font-size: 20px;
 	color: white;
 	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .dialogTitleImage {
 	display: block;
-	background-image: url('/client/assets/images/ui/beigefade.png');
+	background-image: url('/client/assets/textures/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
