--- a/client/css/game.css
+++ b/client/css/game.css
@@ -7,7 +7,7 @@ html {
 }
 body {
 	background: #000;
-	background-image: url("/client/assets/images/backgrounds/FullVillage.webp");
+	background-image: 	
 	width: 100%;
 	height: 100%;
 	margin: 0;
