--- a/client/css/game.css
+++ b/client/css/game.css
@@ -7,7 +7,7 @@ html {
 }
 body {
 	background: #000;
-	background-image: url("./client/assets/images/backgrounds/FullVillage.webp");
+	background-image: url("../assets/images/backgrounds/FullVillage.webp");
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -45,7 +45,7 @@ button, input, textarea {
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 30px;
-	background-image: url(./client/assets/images/ui/loadinglogo.png);
+	background-image: url("../assets/images/ui/loadinglogo.png");
 }
 .loadingCircle {
 	left: -15px;
@@ -162,7 +162,7 @@ button, input, textarea {
 }
 #topToolbar img {
 	display: block;
-	background-image: url('./client/assets/images/ui/beigefade.png');
+	background-image: url('../assets/images/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
@@ -418,7 +418,7 @@ button, input, textarea {
 	border: 2px solid white;
 	display: inline-block;
 	cursor: pointer;
-	background-image: url('./client/assets/images/ui/beigefade.png');
+	background-image: url('../assets/images/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border-radius: 5px;
@@ -566,7 +566,7 @@ button, input, textarea {
 }
 #topToolbarTutorial img {
 	display: block;
-	background-image: url('./client/assets/images/ui/beigefade.png');
+	background-image: url('../assets/images/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
@@ -667,7 +667,7 @@ button, input, textarea {
 }
 .dialogTitleImage {
 	display: block;
-	background-image: url('./client/assets/images/ui/beigefade.png');
+	background-image: url('../assets/images/ui/beigefade.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
