--- a/client/css/game.css
+++ b/client/css/game.css
@@ -707,6 +707,8 @@ button, input, textarea {
 }
 .objectInfoDetailsIcon{
 	float: left;
+	margin-top: -5px;
+	margin-right: 5px;
 }
 .objectInfoFooter{
 	background-color: cadetblue;
@@ -719,10 +721,11 @@ button, input, textarea {
 	display: table;
 }
 .currentStateName{
-	width: 20%;
+	width: 12%;
 }
 .currentStateCountdown{
-	width: 40%;
+	width: 70%;
+	padding-left: 5%;
 }
 .currentStateAction{
 	width: 40%;
