--- a/client/css/game.css
+++ b/client/css/game.css
@@ -723,18 +723,33 @@ button, input, textarea {
 .currentStateName{
 	width: 12%;
 }
+/* New class */
+.currentStateSpeedValue {
+	font-size: 16px;
+	margin-right: 3px;
+}
+
 .currentStateCountdown{
 	width: 70%;
 	padding-left: 5%;
+	font-size: 16px;
 }
 .currentStateAction{
 	width: 40%;
-	border: 2px solid forestgreen;
 	border-radius: 5px;
 	padding: 0px 5px 0px 5px;
-	background-color: bisque;
-	font-size: 19px;
+	font-size: 15px;
 	cursor: pointer;
+	white-space: nowrap;
+	color: #000;
+    background-color: #E3E3E3;
+    border: none;
+    box-shadow: 0 3px #AAAAAA;
+}
+.currentStateAction:active {
+	background-color: #F1F1F1;
+    box-shadow: 0 1px #999;
+    transform: translateY(2px);
 }
 .currentStateInactiveInfo{
 	display: none;
