ObjectSpeedProgress tab title middle alignment modification

--- a/client/css/jqueryui-overrides.css
+++ b/client/css/jqueryui-overrides.css
@@ -53,7 +53,7 @@
 .ui-dialog-titlebar {
     height: 23px;
     position: relative;
-    padding-top: 14px;
+    padding-top: 10px !important;
 }
 .ui-dialog .ui-dialog-titlebar-close {
     margin: -10px 0 0 0 !important;
