--- a/village/templates/info.html
+++ b/village/templates/info.html
@@ -18,8 +18,8 @@
 </table>
 <p>Config Scan Results</p>
 <table>
-<tr><th>Key</th><th>Result</th></tr>
-{% for item in results|sort %}
-<tr><td><a href="./scan/{{ item }}">{{ item }}</a></td><td>{{ results[item] }}</td></tr>
-{% endfor %}
+    <tr><th>Key</th><th>Result</th></tr>
+    {% for item in results|sort %}
+    <tr><td><a href="../config/scan/{{ item }}">{{ item }}</a></td><td>{{ results[item] }}</td></tr>
+    {% endfor %}
 </table>
