make frame larger to  improve reading experience

--- a/village/templates/info.html
+++ b/village/templates/info.html
@@ -16,4 +16,5 @@
     <tr><td>{{ item }}</td><td><a href="https://{{ id }}.appspot.com/cache/flush/{{ item }}" target="_blank">https://{{ id }}.appspot.com/cache/flush/{{ item }}</a></td></tr>
     {% endfor %}
 </table>
-<iframe src="../config/scan"></iframe>
+<p>Config Scan Result</p>
+<iframe src="../config/scan" width="800"></iframe>
