--- a/client/css/jqueryui-overrides.css
+++ b/client/css/jqueryui-overrides.css
@@ -118,5 +118,9 @@
 }
 
 .ui-progressbar-value {
-    background: forestgreen;
+    background: 
+        linear-gradient(to bottom,  rgba(148,223,57,1) 0%,rgba(132,206,53,1) 50%,rgba(49,170,0,1) 51%,rgba(50,150,0,1) 100%),
+		-moz-linear-gradient(top,  rgba(148,223,57,1) 0%, rgba(132,206,53,1) 50%, rgba(49,170,0,1) 51%, rgba(50,150,0,1) 100%),
+		-webkit-linear-gradient(top,  rgba(148,223,57,1) 0%,rgba(132,206,53,1) 50%,rgba(49,170,0,1) 51%,rgba(50,150,0,1) 100%);
+    border-radius: 7px;
 }
