add effective links to keys

--- a/village/templates/info.html
+++ b/village/templates/info.html
@@ -20,6 +20,6 @@
 <table>
     <tr><th>Key</th><th>Result</th></tr>
     {% for item in scan_results|sort %}
-    <tr><td><a href="./scan/{{ item }}">{{ item }}</a></td><td>{{ scan_results[item] }}</td></tr>
+    <tr><td><a href="../config/scan/{{ item }}">{{ item }}</a></td><td>{{ scan_results[item] }}</td></tr>
     {% endfor %}
 </table>
