--- a/client/css/game.css
+++ b/client/css/game.css
@@ -402,8 +402,37 @@ button, input, textarea {
 	border-radius: 5px;
 	box-shadow: 0 3px #AAAAAA;
 	outline: none;
+	cursor: pointer;
 }
 #buyConfirmYes:active {
+	background-color: #F1F1F1;
+	box-shadow: 0 1px #999;
+	transform: translateY(2px);
+}
+#buyConfirmOK {
+	padding: 5px 17px;
+	background-color: #E3E3E3;
+	border: 1px solid #AAAAAA;
+	border-radius: 5px;
+	box-shadow: 0 3px #AAAAAA;
+	outline: none;
+	cursor: pointer;
+}
+#buyConfirmOK:active {
+	background-color: #F1F1F1;
+	box-shadow: 0 1px #999;
+	transform: translateY(2px);
+}
+#messageDialogOK {
+	padding: 5px 17px;
+	background-color: #E3E3E3;
+	border: 1px solid #AAAAAA;
+	border-radius: 5px;
+	box-shadow: 0 3px #AAAAAA;
+	outline: none;
+	cursor: pointer;
+}
+#messageDialogOK:active {
 	background-color: #F1F1F1;
 	box-shadow: 0 1px #999;
 	transform: translateY(2px);
