--- a/client/css/game.css
+++ b/client/css/game.css
@@ -31,14 +31,11 @@ button, input, textarea {
 	background-position: center;
 }
 .titleScreenButton{
-	font-family: arial;
-	padding: 5px 17px;
-	background-color: #E3E3E3;
-	border: 1px solid #AAAAAA;
-	border-radius: 5px;
+	background-color: #FFFFFF;
 	box-shadow: 0 3px #AAAAAA;
 	outline: none;
 	cursor: pointer;
+    width: 150px;
 }
 .titleScreenButton:active {
 	background-color: #F1F1F1;
@@ -46,8 +43,8 @@ button, input, textarea {
 	transform: translateY(2px);
 }
 #titleScreenPlay {
-	margin-top: 300px;
-	margin-right: 50px;
+    margin-top: 300px;
+    margin-right:50px;
 }
 #loadingContainer {
 	display: none;
@@ -56,7 +53,7 @@ button, input, textarea {
 	padding: 20px;
 	border-radius: 15px;
 	position: absolute;
-	left: 40%;
+	left: 30%;
 	top: 25%;
 	background: rgba(34, 34, 34, 0.80);
 }
@@ -66,10 +63,8 @@ button, input, textarea {
 	padding: 5px;
 }
 .loadingTitle {
-	font-family: arial;
 
-	color: #fff;
-	font-size: 28px;
+    width: 250px;
 }
 .loadingLogo {
 	width: 55px;
