--- a/client/css/game.css
+++ b/client/css/game.css
@@ -161,17 +161,17 @@ button, input, textarea {
 	left: 0;
 }
 #topToolbar {
-	max-height: 35px;
 	list-style: none;
 	padding: 0;
 	margin: auto;
 }
 #topToolbar li {
 	opacity: .9;
-	border: 2px solid white;
+    width: 25px;
+    height: 25px;
 	background-color: white;
 	display: inline-block;
-	margin-left: 10px;
+	margin-left: 20px;
 	padding: 0px;
 	cursor: pointer;
 	border-radius: 5px;
@@ -179,6 +179,10 @@ button, input, textarea {
 }
 #topToolbar li:hover {
 	opacity: 1;
+}
+#topToolbar li:nth-child(7) {
+    width: 50px;
+    min-height: 50px;
 }
 #topToolbar > li:last-child {
 	float: right;
@@ -193,9 +197,10 @@ button, input, textarea {
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
 	border-radius: 5px;
-	width: 25px;
-	height: 25px;
+    width: 100%;
+    height:100%;
 }
+
 #dropDownIcon {
 	position: relative;
 	right: 0px;
@@ -678,6 +683,7 @@ button, input, textarea {
 	min-width: 40px;
 	vertical-align: middle;
 	text-align: center;
+    background-color: white;
 }
 
 #topToolbarTutorial {
