--- a/client/css/game.css
+++ b/client/css/game.css
@@ -167,8 +167,8 @@ button, input, textarea {
 }
 #topToolbar li {
 	opacity: .9;
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
 	background-color: white;
 	display: inline-block;
 	margin-left: 20px;
@@ -180,9 +180,19 @@ button, input, textarea {
 #topToolbar li:hover {
 	opacity: 1;
 }
-#topToolbar li:nth-child(7) {
+#goalButton {
+    margin-top: 40px;
+    margin-left:20px;
     width: 50px;
     min-height: 50px;
+}
+#marketButton {
+    margin-left:20px;
+    position: absolute;
+    top: 0;
+    margin-top: 85vh;
+    width: 50px;
+    height: 50px;
 }
 #topToolbar > li:last-child {
 	float: right;
