--- a/client/css/game.css
+++ b/client/css/game.css
@@ -167,11 +167,11 @@ button, input, textarea {
 }
 #topToolbar li {
 	opacity: .9;
-    width: 35px;
-    height: 35px;
+    min-width: 25px;
+    min-height: 25px;
 	background-color: white;
 	display: inline-block;
-	margin-left: 20px;
+	margin-left: 10px;
 	padding: 0px;
 	cursor: pointer;
 	border-radius: 5px;
@@ -207,8 +207,8 @@ button, input, textarea {
 	background-size: 100% 100%;
 	border: 2px solid #99ccff;
 	border-radius: 5px;
-    width: 100%;
-    height:100%;
+    width: 25px;
+    height: 25px;
 }
 
 #dropDownIcon {
@@ -774,12 +774,14 @@ button, input, textarea {
 }
 #tutorialArrowSpan {
 	position: fixed;
-	width: 31px;
+    margin-top: -35px;
+    width: 31px;
 	height: 33px;
 	z-index: 1000;
 }
 #tutorialArrowImage {
 	position: relative;
+    transform: rotate(220deg);
 }
 #skipTutorial {
 	position: absolute;
