--- a/client/css/game.css
+++ b/client/css/game.css
@@ -200,7 +200,7 @@ button, input, textarea {
 #topToolbar > li:nth-last-child(2) {
     float: right;
 }
-#topToolbar img {
+.topToolImg {
 	display: block;
 	background-image: url('../assets/images/ui/beigefade.png');
 	background-repeat: no-repeat;
@@ -772,16 +772,30 @@ button, input, textarea {
 	list-style: none;
 	padding: 0;
 }
-#tutorialArrowSpan {
+#marketArrow {
 	position: fixed;
     margin-top: -35px;
     width: 31px;
 	height: 33px;
 	z-index: 1000;
 }
-#tutorialArrowImage {
+#topArrow {
+    position: fixed;
+    margin-top: 35px;
+    margin-left: -30px;
+    background: none;
+    border: none;
+    width: 31px;
+    height: 33px;
+    z-index:1000;
+}
+#arrowDown {
 	position: relative;
     transform: rotate(220deg);
+}
+#arrowUp {
+    position:relative;
+    transform:rotate(40deg);
 }
 #skipTutorial {
 	position: absolute;
