--- a/client/css/game.css
+++ b/client/css/game.css
@@ -85,7 +85,7 @@ button, input, textarea {
 	box-shadow: 0 0 205px #2187e7;
 	width: 80px;
 	height: 80px;
-	-moz-animation: spinPulse 2s infinite ease-in-out;
+	-moz-animation: spinPulse 2s infinite linear;
 	-webkit-animation: spinPulse 2s infinite linear;
 }
 .loadingCircleInner {
@@ -185,6 +185,14 @@ button, input, textarea {
     margin-left:20px;
     width: 50px;
     min-height: 50px;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px #000;
+    background-image: url('../assets/images/ui/beigefade.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border: 2px solid #99ccff;
+    border-radius: 5px;
 }
 #marketButton {
     margin-left:20px;
@@ -193,6 +201,14 @@ button, input, textarea {
     margin-top: 85vh;
     width: 50px;
     height: 50px;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px #000;
+    background-image: url('../assets/images/ui/beigefade.png');
+    background-repeat: no-repeat;
+    background-size: 50px 50px;
+    border: 2px solid #99ccff;
+    border-radius: 5px;
 }
 #topToolbar > li:last-child {
 	float: right;
@@ -774,10 +790,7 @@ button, input, textarea {
 }
 #marketArrow {
     position: fixed;
-    margin-top: -35px;
-    margin-left: 5px;
-    width: 31px;
-	height: 33px;
+    margin-top: -75px;
 	z-index: 1000;
     -moz-animation: pointing 1s infinite linear;
     -webkit-animation: pointing 1s infinite linear;
@@ -796,6 +809,7 @@ button, input, textarea {
 }
 #arrowDown {
 	position: relative;
+    width: 45px;
     transform: rotate(220deg);
 }
 #arrowUp {
