--- a/client/css/game.css
+++ b/client/css/game.css
@@ -789,6 +789,7 @@ button, input, textarea {
 	padding: 0;
 }
 #marketArrow {
+    display: none;
     position: fixed;
     margin-top: -75px;
 	z-index: 1000;
@@ -796,6 +797,7 @@ button, input, textarea {
     -webkit-animation: pointing 1s infinite linear;
 }
 #topArrow {
+    display: none;
     position: fixed;
     margin-top: 35px;
     margin-left: 0px;
