fix pointing position and dialog length problem

--- a/client/css/game.css
+++ b/client/css/game.css
@@ -490,6 +490,7 @@ button, input, textarea {
 }
 #messageDialog{
 	max-width: 800px;
+    min-width: 320px;
 	text-align: center;
 }
 .messageDialogUnlockImage{
@@ -800,7 +801,7 @@ button, input, textarea {
     display: none;
     position: fixed;
     margin-top: 35px;
-    margin-left: 0px;
+    margin-left: -30px;
     background: none;
     border: none;
     width: 31px;
